Prevent nav bar from covering anchor content.
The .anchor-target class adds an offset that prevents the fixed
navigation bar from covering up the content when navigating to an anchor
on the page. If the navigation bar's height is ever adjusted, the margin
and padding for the .anchor-target class must be adjusted as well.

--- a/css/common.css
+++ b/css/common.css
@@ -23,3 +23,15 @@
     padding: 0 50px;
   }
 }
+
+/*
+  Adds an offset to an anchor target to prevent the fixed navigation bar from
+  covering up the target's content. The margin and padding size should be
+  adjusted if the navigation bar size is ever changed.
+*/
+.anchor-target:before {
+  content: "";
+  display: block;
+  margin-top: -70px;
+  padding-top: 70px;
+}
